temporary ugly fix for missing colors in theme

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,6 +1,71 @@
 :root {
+    --background-primary: hsl(240deg 21% 15%);
+    --background-primary-alt: hsl(240deg 23% 9%);
+    --background-secondary: hsl(240deg 21% 15%);
+    --background-secondary-alt: hsl(240deg 23% 9%);
+    --background-modifier-border: hsl(240deg 23% 9%);
+    --background-modifier-form-field: hsl(235deg 17% 29% 30%);
+    --background-modifier-form-field-highlighted: hsl(235deg 17% 29% 30%);
+    --background-modifier-box-shadow: hsl(235deg 17% 29% 30%);
+    --background-modifier-success: hsl(115deg 54% 76%);
+    --background-modifier-error: hsl(343deg 81% 75%);
+    --background-modifier-error-rgb: 226 140 140;
+    --background-modifier-error-hover: hsl(343deg 81% 60%);
+    --background-modifier-cover: rgb(0 0 0 80%);
+    --text-accent: hsl(115deg 54% 76%);
+    --text-accent-hover: hsl(115deg 54% 76%);
+    --text-normal: hsl(226deg 64% 88%);
+    --text-normal-transparent: hsl(220deg 38% 89% / 60%);
+    --text-muted: hsl(227deg 35% 80%);
+    --text-muted-rgb: 166, 173, 201;
+    --text-faint: hsl(228deg 24% 72%);
+    --text-error: hsl(342deg 79% 75%);
+    --text-error-hover: hsl(342deg 79% 60%);
+    --text-highlight-bg: hsl(41deg 86% 83%);
+    --text-highlight-bg-active: hsl(232deg 97% 85%);
+    --text-selection: hsl(233deg 12% 39%);
+    --text-on-accent: hsl(240deg 21% 12%);
+    --interactive-normal: hsl(170deg 57% 73%);
+    --interactive-hover: hsl(170deg 57% 73%);
+    --interactive-accent: hsl(115deg 54% 76%);
+    --interactive-accent-rgb: 166, 227, 161;
+    --interactive-accent-hover: hsl(115deg 54% 76%);
+    --interactive-success: hsl(115deg 54% 76%);
+    --scrollbar-active-thumb-bg: rgb(255 255 255 / 20%);
+    --scrollbar-bg: rgb(255 255 255 / 5%);
+    --scrollbar-thumb-bg: rgb(255 255 255 / 10%);
+    --code-blocks: hsl(10deg 56% 91%);
+    --border: hsl(249deg 18% 22%);
+    --border-inset: hsl(254deg 12% 36%);
+    --active-interaction: hsl(316deg 72% 86%);
+    --highlight-mix-blend-mode: lighten;
+    --internal-buttons: hsl(23deg 92% 75%);
+    --text-selection-opaque: hsl(232deg 97% 85%);
+    --rosewater: hsl(10deg 56% 91%);
+    --maroon: hsl(350deg 65% 77%);
+    --pink: hsl(316deg 72% 86%);
+    --lavender: hsl(232deg 97% 85%);
+    --black-0: hsl(240deg 23% 9%);
+    --black-1: hsl(240deg 21% 12%);
+    --black-2: hsl(240deg 21% 15%);
+    --black-3: hsl(237deg 16% 23%);
+    --black-4: hsl(233deg 12% 39%);
+
+    /* from _mocha.scss, for reference */
+    --subtext1: hsl(227deg 35% 80%);
+    --subtext0: hsl(228deg 24% 72%);
+    --overlay2: hsl(228deg 17% 64%);
+    --overlay1: hsl(230deg 13% 55%);
+    --overlay0: hsl(231deg 11% 47%);
+    --surface2: hsl(233deg 12% 39%);
+    --surface1: hsl(234deg 13% 31%);
+    --surface0: hsl(237deg 16% 23%);
+    --base: hsl(240deg 21% 15%);
+    --mantle: hsl(240deg 21% 12%);
+    --crust: hsl(240deg 23% 9%);
+
     /* Link effects */
-    --link-transition: background-color 0.4s ease, color 0.2s ease;
+    --link-transition: background-color 0.3s ease, color 0.3s ease;
 
     /* Box shadows */
     --box-shadow-inset-small: 0 2px 4px inset hsl(254deg 25% 10%);
@@ -37,7 +102,6 @@
 
     /* Margin */
     --margin-small: 2px;
-    --margin-medium: 6px;
 
     /* Borders */
     --border-default: hsl(249deg 18% 22%) 1px solid;
